--- a/pug/home/section_table_persebaran_penerima.pug
+++ b/pug/home/section_table_persebaran_penerima.pug
@@ -4,7 +4,7 @@ section.section-course.py-4.pt-lg-5
             h4 Persebaran Penerima
             p Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).
         
-            table#tablePersebaran.table.table-hover.fs-7.my-4
+            table#tablePersebaran.table.table-hover.fs-7.my-4.display.dataTable
                 thead
                     tr
                         th(rowspan="2") Provinsi
@@ -29,159 +29,160 @@ section.section-course.py-4.pt-lg-5
 
                         td SK Penetapan      
                         td Aktif  
-                tbody 
-                    tr 
-                        td.text-start
-                            a(href="#") Aceh
-                        td(style="background:rgba(42, 114, 199, .1)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start
-                            a(href="#") Sumatera Utara
-                        td(style="background:rgba(42, 114, 199, .15)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    tbody(rowspan="1" colspan="11")
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Aceh
+                    //-     td(style="background:rgba(42, 114, 199, .1)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start
-                            a(href="#") Sumatera Barat
-                        td(style="background:rgba(42, 114, 199, .2)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Sumatera Utara
+                    //-     td(style="background:rgba(42, 114, 199, .15)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start 
-                            a(href="#") Riau
-                        td(style="background:rgba(42, 114, 199, .25)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Sumatera Barat
+                    //-     td(style="background:rgba(42, 114, 199, .2)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start 
-                            a(href="#") Jambi
-                        td(style="background:rgba(42, 114, 199, .3)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start 
+                    //-         a(href="#") Riau
+                    //-     td(style="background:rgba(42, 114, 199, .25)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start
-                            a(href="#") Sumatera Selatan
-                        td(style="background:rgba(42, 114, 199, .35)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start 
+                    //-         a(href="#") Jambi
+                    //-     td(style="background:rgba(42, 114, 199, .3)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start
-                            a(href="#") Bengkulu
-                        td(style="background:rgba(42, 114, 199, .4)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Sumatera Selatan
+                    //-     td(style="background:rgba(42, 114, 199, .35)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start
-                            a(href="#") Lampung
-                        td(style="background:rgba(42, 114, 199, .45)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Bengkulu
+                    //-     td(style="background:rgba(42, 114, 199, .4)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start
-                            a(href="#") Kep. Bangka Belitung
-                        td(style="background:rgba(42, 114, 199, .5)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Lampung
+                    //-     td(style="background:rgba(42, 114, 199, .45)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
-                    tr 
-                        td.text-start
-                            a(href="#") Kepulauan Riau
-                        td(style="background:rgba(42, 114, 199, 0)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Kep. Bangka Belitung
+                    //-     td(style="background:rgba(42, 114, 199, .5)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
+
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Kepulauan Riau
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
                     
-                    tr 
-                        td.text-start
-                            a(href="#") Palembang
-                        td(style="background:rgba(42, 114, 199, 0)") 2
-                        td(style="background:rgba(42, 114, 199, 0)") 3
-                        td(style="background:rgba(42, 114, 199, 0)") 4
-                        td(style="background:rgba(42, 114, 199, 0)") 5
-                        td(style="background:rgba(42, 114, 199, 0)") 6
-                        td(style="background:rgba(42, 114, 199, 0)") 7
-                        td(style="background:rgba(42, 114, 199, 0)") 8
-                        td(style="background:rgba(42, 114, 199, 0)") 9
-                        td(style="background:rgba(42, 114, 199, 0)") 10
-                        td(style="background:rgba(42, 114, 199, 0)") 11
+                    //- tr 
+                    //-     td.text-start
+                    //-         a(href="#") Palembang
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 2
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 3
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 4
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 5
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 6
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 7
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 8
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 9
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 10
+                    //-     td(style="background:rgba(42, 114, 199, 0)") 11
 
                     
