--- a/pug/includes/html_foot.pug
+++ b/pug/includes/html_foot.pug
@@ -3,6 +3,7 @@ script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundl
 script(src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-min.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 script(src="https://cdn.datatables.net/2.1.4/js/dataTables.js")
+script(src="https://cdn.datatables.net/2.1.4/js/dataTables.bootstrap5.js")
 //- script(src=baseURL+"js/lib/owl.carousel.min.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer") 
 //- script(src="https://cdn.datatables.net/v/bs5/dt-2.1.3/af-2.7.0/b-3.1.1/fc-5.0.1/fh-4.0.1/r-3.0.2/datatables.min.js")
