--- a/css/scss/scss-custom/_header.scss
+++ b/css/scss/scss-custom/_header.scss
@@ -225,6 +225,7 @@ ul.navbar-custom{
       left: 0;
       z-index: 22;
       border-radius: 20px;
+      overflow: hidden;
     }
     .search-mobile{
       z-index: -1;
