--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -2,7 +2,7 @@ section.section-course.py-3.py-lg-5
     .container.px-4.px-md-0
         .row.text-center
             .col-12
-                h4.mb-3 Lembaga Pelatihan
+                h4.mb-3.custom-rfs-h4 Lembaga Pelatihan
             .col-lg-6.mb-4
                 .border.rounded-3.p-3
                     //- chart total lembaga pelatihan
@@ -23,10 +23,9 @@ section.section-course.py-3.py-lg-5
   
             .col-lg-6.mb-4
                 .border.rounded-3.p-3
-                    .p-3.flex-coloumn
-                        //- Chart total jumlah //
-                        h5 Preferensi Moda Pelatihan
-                        span.skeleton-box.w-100.rounded(style="height:300px")
+                    //- Chart total jumlah //
+                    h5.mb-4 Preferensi Moda Pelatihan
+                    span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-12.mb-4
                 h5.my-4 Kategori Pelatihan Terbanyak
