--- a/pug/home/section_table_persebaran_penerima.pug
+++ b/pug/home/section_table_persebaran_penerima.pug
@@ -1,7 +1,7 @@
 section.section-course.py-4.pt-lg-5
     .container.px-4.px-md-0
         .row.text-center
-            h4 Persebaran Penerima
+            h4.custom-rfs-h4 Persebaran Penerima
             p Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).
         
             table#tablePersebaran.table.table-hover.fs-7.my-4.display.dataTable
