--- a/pug/includes/navigation.pug
+++ b/pug/includes/navigation.pug
@@ -20,6 +20,27 @@ header.pdt-header
             button#button-addon1.btn.btn-outline-light(type='button')
               i.bi.bi-search
             input.form-control(type='text' aria-label='Sizing example input' aria-describedby='inputGroup-sizing-default' placeholder='Cari provinsi / kabupaten...')
+          //- .popup-search
+          //-   dl 
+          //-     dd 
+          //-       a(href="#") Aceh 
+          //-     dd 
+          //-       a(href="#") Jambi 
+          //-     dd 
+          //-       a(href="#") Palembang 
+          //-     dd 
+          //-       a(href="#") Aceh 
+          //-     dd 
+          //-       a(href="#") Jambi 
+          //-     dd 
+          //-       a(href="#") Palembang 
+          //-     dd 
+          //-       a(href="#") Aceh 
+          //-     dd 
+          //-       a(href="#") Jambi 
+          //-     dd 
+          //-       a(href="#") Palembang 
+
 
   
 
