--- a/pug/home/section_profil_penerima.pug
+++ b/pug/home/section_profil_penerima.pug
@@ -1,7 +1,7 @@
 section.section-course.py-3.py-lg-5
     .container.px-4.px-md-0
         .row.text-center
-            h4.mb-4 Profil Penerima
+            h4.mb-4.custom-rfs-h4 Profil Penerima
 
             .col-lg-6
                 .border.p-4.d-flex.rounded-3.gap-3.mb-4
