--- a/pug/home/section_profil_penerima.pug
+++ b/pug/home/section_profil_penerima.pug
@@ -8,25 +8,31 @@ section.section-course.py-3.py-lg-5
                     img(src="img/img-people.svg", alt="")
                     div.text-start
                         h6.h1.text-primary 18.887.737
-                        p.mb-0 Total Penerima Program
+                        p.mb-0 Total Penerima Aktif Program
 
                 .border.p-4.d-flex.rounded-3.mb-4.bg-map-indonesia
                     div.text-start
                         h6.h1.text-primary 100%
                         p.mb-0 Mencakup seluruh wilayah provinsi, kabupaten/kota, dan kecamatan di Indonesia.
 
-            .col-lg-6
-                //- Chart jenis kelamin
-                div#jenisKelamin(style="height:300px")
+            .col-lg-6.mb-4
+                .border.p-3.w-100.rounded
+                    h5.mb-3 Jenis Kelamin
+                    //- Chart jenis kelamin
+                    div#jenisKelamin(style="height:300px")
                     //- span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-6
-                //- Chart Umur
-                div#umur
-                    span.skeleton-box.w-100.rounded(style="height:300px")
+                .border.p-3.w-100.rounded
+                    h5.mb-3 Umur
+                    //- Chart Umur
+                    div#umur
+                        span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-6
-                //- Chart Pendidikan Terakhir
-                div#pendidikanTerakhir
-                    span.skeleton-box.w-100.rounded(style="height:300px")
+                .border.p-3.w-100.rounded
+                    h5.mb-3 Pendidikan Terakhir
+                    //- Chart Pendidikan Terakhir
+                    div#pendidikanTerakhir
+                        span.skeleton-box.w-100.rounded(style="height:300px")
 
