--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -1,10 +1,7 @@
-section.pt-3.pb-4 
+section.section-course
     .container 
-        .row.bg-s100.rounded-3(style="min-height:320px") 
-            .col-lg-8 
-                p Map Canvas 
-
-            .col-lg-4.bg-s200.p-3
+        .row.d-flex.flex-row-reverse
+            .col-lg-4.bg-s200.p-4
                 div
                     .h6 Provinsi
                     h1 Jambi 
@@ -19,4 +16,9 @@ section.pt-3.pb-4
                     .inner-funfact.d-flex.align-items-center.justify-content-center
                         span.h3.m-0 17
 
-                p.fs-7 Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)
+                p.fs-7.mt-2 Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)
+                
+            .col-lg-8.bg-s100.p-4(style="min-height:320px") 
+                p Map Canvas 
+
+            
