--- a/css/scss/scss-custom/_header.scss
+++ b/css/scss/scss-custom/_header.scss
@@ -1,6 +1,7 @@
 // HEADER START
 .pdt-header{
-    padding: .5rem 0;
+    padding: .75rem 0;
+    // height: 70px;
     width: 100%;
     position: absolute;
     z-index: 234;
@@ -131,7 +132,7 @@ ul.navbar-custom{
     padding: 4px;
     // outline: solid 1px red;
     position: absolute;
-    top:.5rem;
+    top:-4px;
     right: 0;
     // transform: translateY(0%);
   }
