--- a/pug/home/section_inklusivitas.pug
+++ b/pug/home/section_inklusivitas.pug
@@ -1,5 +1,5 @@
 section.section-course.py-3.py-lg-5
-    .container.px-4.px-md-0
+    .container
         .row.text-center
             h4.mb-3.custom-rfs-h4 Inklusivitas
             .col-lg-3.img-pmi.rounded-start-3.d-flex.align-items-end.p-3.text-start
