update og image

--- a/provinsi/index.pug
+++ b/provinsi/index.pug
@@ -5,7 +5,7 @@
 - var contentDescription = {}
 - contentDescription.title = "Provinsi ABC - prakerja.go.id"
 - contentDescription.description = "Informasi statistik penerima prakerja selama periode 2020 - 2024."
-- contentDescription.ogImage = "https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.jpg"
+- contentDescription.ogImage = "https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png"
 
 doctype html
 html(lang="id" translate="no" page-class="home")
