--- a/tanyajawab/index.pug
+++ b/tanyajawab/index.pug
@@ -5,7 +5,7 @@
 - var contentDescription = {}
 - contentDescription.title = "Tanya Jawab Statistik Program Prakerja - prakerja.go.id"
 - contentDescription.description = "Informasi statistik penerima prakerja selama periode 2020 - 2024."
-- contentDescription.ogImage = "https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.jpg"
+- contentDescription.ogImage = "https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png"
 
 //- doctype html
 <!DOCTYPE html>
