fix auto height layout

--- a/pug/home/section_profil_penerima.pug
+++ b/pug/home/section_profil_penerima.pug
@@ -3,14 +3,14 @@ section.section-course.py-3.py-lg-5
         .row.text-center
             h4.mb-4.custom-rfs-h4 Profil Penerima
 
-            .col-lg-6
-                .border.p-4.d-flex.rounded-3.gap-3.mb-4
+            .col-lg-6.d-flex.flex-column
+                .border.p-4.d-flex.rounded-3.gap-3.mb-4.h-100.align-items-center
                     img(src="img/img-people.svg", alt="")
                     div.text-start
                         h6.h1.text-primary 18.887.737
                         p.mb-0 Total Penerima Aktif Program
 
-                .border.p-4.d-flex.rounded-3.mb-4.bg-map-indonesia
+                .border.p-4.d-flex.rounded-3.mb-4.bg-map-indonesia.h-100.align-items-center
                     div.text-start
                         h6.h1.text-primary 100%
                         p.mb-0 Mencakup seluruh wilayah provinsi, kabupaten/kota, dan kecamatan di Indonesia.
