--- a/pug/home/section_inklusivitas.pug
+++ b/pug/home/section_inklusivitas.pug
@@ -1,8 +1,8 @@
 section.section-course.py-3.py-lg-5
     .container
-        .row.text-center
-            h4.mb-3.custom-rfs-h4 Inklusivitas
-            .col-lg-3.img-pmi.rounded-start-3.d-flex.align-items-end.p-3.text-start
+        h4.mb-3.custom-rfs-h4.text-center Inklusivitas
+        .row.px-4.px-lg-0.custom-rounded
+            .col-lg-3.img-pmi.d-flex.align-items-end.p-3.text-start
                 div
                     h4.display-4.text-white 3%
                     h5.text-white Purna PMI
@@ -14,7 +14,7 @@ section.section-course.py-3.py-lg-5
                 div
                     h4.display-4.text-white 3%
                     h5.text-white Purna Difabel
-            .col-lg-3.img-perdesaan.rounded-end-3.d-flex.align-items-end.p-3.text-start
+            .col-lg-3.img-perdesaan.d-flex.align-items-end.p-3.text-start
                 div
                     h4.display-4.text-white 65%
                     h5.text-white Purna Perdesaan
