--- a/pug/home/section_testimony.pug
+++ b/pug/home/section_testimony.pug
@@ -1,6 +1,6 @@
 section.section-testimony
   .container.py-3.py-lg-5.px-4.px-md-0
-    h4.custom-rfs-h4.text-center
+    h4.custom-rfs-h4.text-center.mb-3
         | Apa Kata Mereka?
 
     .owl-carousel.testimony-carousel.carousel-auto-height
