--- a/css/scss/owl.carousel.scss
+++ b/css/scss/owl.carousel.scss
@@ -446,7 +446,9 @@
       display: flex!important;
       .owl-item{
         // outline: solid 1px red;
-        background-color: var(--b100);
+        // background-color: var(--b100);
+        background: rgba(255, 255, 255, 0.50);
+        backdrop-filter: blur(2px);
         border-radius: 1rem;
         margin: .5rem .75rem;
       }
