--- a/pug/home/section_profil_penerima.pug
+++ b/pug/home/section_profil_penerima.pug
@@ -19,7 +19,7 @@ section.section-course.py-3.py-lg-5
                 .border.p-3.w-100.rounded
                     h5.mb-3 Jenis Kelamin
                     //- Chart jenis kelamin
-                    div#jenisKelamin(style="height:300px")
+                    div#jenisKelamin.chart-adjust-inner-width(style="min-height:300px")
                     //- span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-6
