--- a/pug/home/section_insentif.pug
+++ b/pug/home/section_insentif.pug
@@ -45,7 +45,7 @@ section.section-course.py-3.py-lg-5
 
             .col-lg-12.mb-4
                 h5 Pemanfaatan Insentif
-                .row.gap-0.d-flex.align-items-end
+                .row.gap-0.d-flex.align-items-end.px-3.px-lg-0
                     .col-lg-3.m-0.p-0
                         .p-4.bg-b600.text-start
                             h5.h1.text-white.pt-md-5 96%
