--- a/pug/includes/footer.pug
+++ b/pug/includes/footer.pug
@@ -102,6 +102,6 @@ footer(class="section-footer")
                 a(href="https://www.linkedin.com/company/kartu-prakerja/" target="_blank" aria-label="Prakerja Linkedin")
                     i(class="bi bi-linkedin")
             div(class="copyrights mt-3 mt-lg-0")
-                span &copy; Kartu Prakerja 2024
+                span &copy; Prakerja 2024
     button(class="scroll-top")
         i(class="bi bi-chevron-up")
