--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -5,16 +5,20 @@ section.section-course
                 div
                     .h6 Provinsi
                     h1 Jambi 
-                    .h6 Pulau Sumatera
+                    .h6.text-secondary Pulau Sumatera
 
                 hr
 
-                p 
+                p.text-secondary 
                     i / fun fact /
 
                 .outer-funfact.bg-o500.text-white 
                     .inner-funfact.d-flex.align-items-center.justify-content-center
                         span.h3.m-0 17
+                
+                .outer-funfact.bg-b500.text-white 
+                    .inner-funfact.d-flex.align-items-center.justify-content-center
+                        span.h3.m-0 38
 
                 p.fs-7.mt-2 Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)
                 
