--- a/pug/provinsi/section_profil_penerima.pug
+++ b/pug/provinsi/section_profil_penerima.pug
@@ -1,12 +1,12 @@
 section.pt-3
     .container 
-        section.py-lg-5.py-4
-            h4 Profil Penerima Manfaat
-            p Data berasal dari tahun 2020-2024 dan Gelombang 1-69
+            h4.mb-0 Profil Penerima Manfaat
+            p.mb-4 Data berasal dari tahun 2020-2024 dan Gelombang 1-69
             
             .row.mb-4
-                .col-12.p-2.bg-b100.rounded.mb-4
-                    h6.m-0 Jenis Kelamin
+                .col-12.mb-4
+                    .p-2.bg-b100-gradient
+                        h5.m-0 Jenis Kelamin
                 .col-lg-6 
                     span.skeleton-box.w-100.rounded(style="height:200px")
 
@@ -29,8 +29,9 @@ section.pt-3
                                 td 51,50%
 
             .row.mb-4
-                .col-12.p-2.bg-b100.rounded.mb-4
-                    h6.m-0 Rentang Umur
+                .col-12.mb-4
+                    .p-2.bg-b100-gradient
+                        h5.m-0 Rentang Umur
                 .col-lg-6 
                     span.skeleton-box.w-100.rounded(style="height:200px")
 
@@ -68,8 +69,9 @@ section.pt-3
                                 td 31,50%
 
             .row.mb-4
-                .col-12.p-2.bg-b100.rounded.mb-4
-                    h6.m-0 Pendidikan Terakhir
+                .col-12.mb-4
+                    .p-2.bg-b100-gradient
+                        h5.m-0 Pendidikan Terakhir
                 .col-lg-6 
                     span.skeleton-box.w-100.rounded(style="height:200px")
 
@@ -117,8 +119,9 @@ section.pt-3
                                 td 31,50%
 
             .row.mb-4
-                .col-12.p-2.bg-b100.rounded.mb-4
-                    h6.m-0 Status Pekerjaan
+                .col-12.mb-4
+                    .p-2.bg-b100-gradient
+                        h5.m-0 Status Pekerjaan
                 .col-lg-6 
                     span.skeleton-box.w-100.rounded(style="height:200px")
 
@@ -151,8 +154,9 @@ section.pt-3
                                 td 31,50%
 
             .row.mb-4
-                .col-12.p-2.bg-b100.rounded.mb-4
-                    h6.m-0 Moda Pelatihan
+                .col-12.mb-4
+                    .p-2.bg-b100-gradient
+                        h5.m-0 Moda Pelatihan
                 .col-lg-6 
                     span.skeleton-box.w-100.rounded(style="height:200px")
 
